--- a/model.ipynb
+++ b/model.ipynb
@@ -1773,6 +1773,171 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    The accuracy for our model is 71.4953%\n",
+      "    The True Positive Rate is 47.561%,    The False Positive Rate is 13.636%,\n",
+      "    The True Negative Rate is 86.364%,    The False Negative Rate is 52.439%\n",
+      "    ________________________________________________________________________________\n",
+      "    \n",
+      "\n",
+      "    The positive is  'survived'\n",
+      "    Confusion Matrix\n",
+      "    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred_dead</th>\n",
+       "      <th>pred_survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>actual_dead</th>\n",
+       "      <td>True Negative: 114</td>\n",
+       "      <td>False positive: 18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actual_survived</th>\n",
+       "      <td>False Negative: 43</td>\n",
+       "      <td>True Positive: 39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          pred_dead       pred_survived\n",
+       "actual_dead      True Negative: 114  False positive: 18\n",
+       "actual_survived  False Negative: 43   True Positive: 39"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    ________________________________________________________________________________\n",
+      "    \n",
+      "    Classification Report:\n",
+      "    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1-score</th>\n",
+       "      <th>support</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>dead</th>\n",
+       "      <td>0.726115</td>\n",
+       "      <td>0.863636</td>\n",
+       "      <td>0.788927</td>\n",
+       "      <td>132.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>survived</th>\n",
+       "      <td>0.684211</td>\n",
+       "      <td>0.475610</td>\n",
+       "      <td>0.561151</td>\n",
+       "      <td>82.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.714953</td>\n",
+       "      <td>0.714953</td>\n",
+       "      <td>0.714953</td>\n",
+       "      <td>0.714953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>macro avg</th>\n",
+       "      <td>0.705163</td>\n",
+       "      <td>0.669623</td>\n",
+       "      <td>0.675039</td>\n",
+       "      <td>214.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weighted avg</th>\n",
+       "      <td>0.710058</td>\n",
+       "      <td>0.714953</td>\n",
+       "      <td>0.701649</td>\n",
+       "      <td>214.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              precision    recall  f1-score     support\n",
+       "dead           0.726115  0.863636  0.788927  132.000000\n",
+       "survived       0.684211  0.475610  0.561151   82.000000\n",
+       "accuracy       0.714953  0.714953  0.714953    0.714953\n",
+       "macro avg      0.705163  0.669623  0.675039  214.000000\n",
+       "weighted avg   0.710058  0.714953  0.701649  214.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_fun_cindy.model_performs(X_validate, y_validate, knn2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1804,6 +1969,171 @@
     "\n",
     "#score the thing\n",
     "knn3.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    The accuracy for our model is 67.2897%\n",
+      "    The True Positive Rate is 41.463%,    The False Positive Rate is 16.667%,\n",
+      "    The True Negative Rate is 83.333%,    The False Negative Rate is 58.537%\n",
+      "    ________________________________________________________________________________\n",
+      "    \n",
+      "\n",
+      "    The positive is  'survived'\n",
+      "    Confusion Matrix\n",
+      "    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred_dead</th>\n",
+       "      <th>pred_survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>actual_dead</th>\n",
+       "      <td>True Negative: 110</td>\n",
+       "      <td>False positive: 22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actual_survived</th>\n",
+       "      <td>False Negative: 48</td>\n",
+       "      <td>True Positive: 34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          pred_dead       pred_survived\n",
+       "actual_dead      True Negative: 110  False positive: 22\n",
+       "actual_survived  False Negative: 48   True Positive: 34"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    ________________________________________________________________________________\n",
+      "    \n",
+      "    Classification Report:\n",
+      "    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1-score</th>\n",
+       "      <th>support</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>dead</th>\n",
+       "      <td>0.696203</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.758621</td>\n",
+       "      <td>132.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>survived</th>\n",
+       "      <td>0.607143</td>\n",
+       "      <td>0.414634</td>\n",
+       "      <td>0.492754</td>\n",
+       "      <td>82.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.672897</td>\n",
+       "      <td>0.672897</td>\n",
+       "      <td>0.672897</td>\n",
+       "      <td>0.672897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>macro avg</th>\n",
+       "      <td>0.651673</td>\n",
+       "      <td>0.623984</td>\n",
+       "      <td>0.625687</td>\n",
+       "      <td>214.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weighted avg</th>\n",
+       "      <td>0.662077</td>\n",
+       "      <td>0.672897</td>\n",
+       "      <td>0.656746</td>\n",
+       "      <td>214.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              precision    recall  f1-score     support\n",
+       "dead           0.696203  0.833333  0.758621  132.000000\n",
+       "survived       0.607143  0.414634  0.492754   82.000000\n",
+       "accuracy       0.672897  0.672897  0.672897    0.672897\n",
+       "macro avg      0.651673  0.623984  0.625687  214.000000\n",
+       "weighted avg   0.662077  0.672897  0.656746  214.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_fun_cindy.model_performs(X_validate, y_validate, knn3)"
    ]
   },
   {
